# moon

./: .dockerignore  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prototools  .yarnrc.yml  404.html  AGENTS.md  CHANGELOG.md  CHANGELOG_V0.md  CHANGELOG_V1.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  ROADMAP.md  api.html  babel.config.js  blog.html  depot.json  dist-workspace.toml  docs.html  eslint.config.mjs  flake.nix  index.html  install.ps1  install.sh  jest.config.js  justfile  llms-full.txt  llms.txt  moon.html  moon.yml  (+19 more)
crates/action/: Cargo.toml
crates/action-context/: Cargo.toml
crates/action-context/src/: lib.rs
crates/action-graph/: Cargo.toml  docs.md
crates/action-graph/src/: action_graph.rs  action_graph_builder.rs  action_graph_builder2.rs  action_graph_error.rs  lib.rs
crates/action-graph/tests/: action_graph_builder_test.rs  action_graph_test.rs  utils.rs
crates/action-pipeline/: Cargo.toml
crates/action-pipeline/src/: action.rs  action_dispatcher.rs  action_pipeline.rs  action_runner.rs  event_emitter.rs  job.rs  job_context.rs  job_dispatcher.rs  lib.rs  metrics.rs
crates/action-pipeline/tests/: action_pipeline_test.rs  report_estimate.rs  report_estimate_test.rs
crates/action-runner/: Cargo.toml
crates/action-runner/src/: action_runner.rs  context.rs  dep_graph.rs  errors.rs  events.rs  lib.rs  node.rs  runner.rs
crates/action-runner/tests/: dep_graph_test.rs
crates/action/src/: action.rs  action_node.rs  context.rs  errors.rs  install_node_deps.rs  lib.rs  node.rs  operation.rs  operation_list.rs  operation_meta.rs  run_target.rs  setup_toolchain.rs  sync_node_project.rs
crates/action/tests/: action_test.rs  operation_test.rs
crates/actions/: Cargo.toml
crates/actions/src/: lib.rs  utils.rs
crates/actions/tests/: commands_test.rs  install_dependencies_test.rs  sync_project_test.rs  sync_workspace_test.rs  utils_test.rs
crates/affected/: Cargo.toml
crates/affected/benches/: affected_tracker.rs  tracker.rs
crates/affected/src/: affected.rs  affected_tracker.rs  affected_tracker_async.rs  lib.rs  project_tracker.rs  task_tracker.rs
crates/affected/tests/: affected_tracker_async_test.rs  affected_tracker_test.rs
crates/api/: Cargo.toml
crates/api/mutations/: create_run.gql  update_run.gql
crates/api/src/: launchpad.rs
crates/app/: Cargo.toml
crates/app-context/: Cargo.toml
crates/app-context/src/: app_context.rs  lib.rs
crates/app/src/: app.rs  app_error.rs  app_options.rs  components.rs  experiments.rs  helpers.rs  lib.rs  main.rs  prompts.rs  session.rs  session_atomic.rs
crates/app/tests/: helpers_test.rs
crates/args/: Cargo.toml
crates/args/src/: lib.rs
crates/args/tests/: args_test.rs
crates/bench-utils/: Cargo.toml
crates/bench-utils/src/: lib.rs
crates/blob/: Cargo.toml
crates/blob/src/: blob.rs  lib.rs
crates/blob/tests/: blob_test.rs
crates/cache/: Cargo.toml
crates/cache-item/: Cargo.toml
crates/cache-item/src/: cache_item.rs  cache_mode.rs  lib.rs
crates/cache-item/tests/: cache_item_test.rs
crates/cache-local/: Cargo.toml
crates/cache-local/src/: lib.rs  local_storage.rs
crates/cache-local/tests/: local_storage_test.rs
crates/cache-remote/: Cargo.toml
crates/cache-remote/src/: compressable_blob.rs  grpc_remote_storage.rs  grpc_services.rs  grpc_tls.rs  headers.rs  http_remote_storage.rs  http_tls.rs  lib.rs  remote_error.rs  remote_storage.rs
crates/cache-remote/tests/: grpc_remote_storage_test.rs  http_remote_storage_test.rs
crates/cache-storage/: Cargo.toml
crates/cache-storage/src/: bazel_compat.rs  capabilities.rs  digest_compat.rs  helpers.rs  lib.rs  manifest.rs  manifest_files.rs  storage.rs  storage_backend.rs
crates/cache-storage/tests/: capabilities_test.rs  manifest_test.rs  storage_test.rs
crates/cache/benches/: hash_files.rs
crates/cache/src/: cache_engine.rs  engine.rs  errors.rs  hash_engine.rs  hasher.rs  helpers.rs  item.rs  items.rs  lib.rs  runfiles.rs  state_engine.rs
crates/cache/tests/: cache_engine_test.rs  engine_test.rs  hash_engine_test.rs
crates/cas/: Cargo.toml
crates/cas/src/: cas.rs  cas_error.rs  config.rs  content_hash.rs  fs.rs  gc.rs  lib.rs  store.rs
crates/cas/tests/: cas_store_test.rs  cas_test.rs  content_hash_test.rs  gc_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  app_error.rs  enums.rs  helpers.rs  lib.rs  lookup.rs  main.rs  main_exec.rs  output.rs  shared.rs  states.rs  stdio.rs  systems.rs  terminal.rs
crates/cli/tests/: action_graph_test.rs  action_graph_test.rso  bin_test.rs  check_test.rs  dep_graph_test.rs  docker_file_test.rs  docker_prune_test.rs  docker_scaffold_test.rs  docker_setup_test.rs  docker_test.rs  docker_test.rs_DISABLED  exec_test.rs  ext_test.rs  extension_add_test.rs  extension_info_test.rs  generate_test.rs  hash_test.rs  helpers.rs  init_node_test.rs  init_rust_test.rs  init_test.rs  init_test.rso  migrate_test.rs  misc_test.rs  node_test.rs  otel_test.rs  project_graph_test.rs  project_test.rs  projects_test.rs  query_affected_test.rs  query_changed_files_test.rs  (+26 more)
crates/codegen/: Cargo.toml
crates/codeowners/: Cargo.toml
crates/common/: Cargo.toml
crates/config/: Cargo.toml
crates/config-loader/: Cargo.toml
crates/config-schema/: Cargo.toml
crates/console/: Cargo.toml
crates/console-reporter/: Cargo.toml
wasm/: Cargo.toml
wasm/ext-sync/: Cargo.toml
wasm/ext-task/: Cargo.toml
wasm/prebuilts/: bun_toolchain.wasm  deno_toolchain.wasm  go_toolchain.wasm  javascript_toolchain.wasm  migrate_nx_extension.wasm  migrate_turborepo_extension.wasm  node_depman_toolchain.wasm  node_toolchain.wasm  rust_toolchain.wasm  system_toolchain.wasm  typescript_toolchain.wasm
wasm/tc-tier1/: Cargo.toml
wasm/tc-tier2/: Cargo.toml
wasm/tc-tier2-reqs/: Cargo.toml
wasm/tc-tier2-setup-env/: Cargo.toml
wasm/tc-tier3/: Cargo.toml
wasm/tc-tier3-reqs/: Cargo.toml
wasm/test-plugin/: Cargo.toml
wasm/vcs-git/: Cargo.toml
wasm/vcs-jj-prototype/: Cargo.toml
(+16303 files in other folders)
