[workspace]
resolver = "3"
members = ["crates/*", "legacy/core/*"]
exclude = ["tests/fixtures", "wasm/test-plugin"]
default-members = ["crates/cli"]

[workspace.dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
cached = "0.56.0"
chrono = { version = "0.4.43", features = ["serde"] }
cd_env = "0.3.1"
ci_env = "0.4.1"
clap = { version = "4.5.56", default-features = false, features = [
    "derive",
    "std",
    "error-context",
] }
clap_complete = "4.5.65"
compact_str = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
convert_case = "0.10.0"
daggy = { version = "0.9.0", features = ["serde-1"] }
dirs = "6.0.0"
futures = "0.3.31"
indexmap = "2.13.0"
iocraft = "0.7.17"
md5 = "0.8.0"
miette = "7.6.0"
pathdiff = "0.2.3"
petgraph = { version = "0.8.3", default-features = false, features = [
    "serde-1",
] }
relative-path = { version = "2.0.1" }
regex = { version = "1.12.2", default-features = false, features = [
    "std",
    "perf",
] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls",
    # We don't use openssl but its required for musl builds
    "native-tls-vendored",
] }
rustc-hash = "2.1.1"
scc = "3.5.4"
schematic = { version = "0.19.4", default-features = false, features = [
    "schema",
] }
serial_test = "3.3.1"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
starbase = { version = "0.10.9" }
starbase_archive = { version = "0.12.3", default-features = false, features = [
    "miette",
    "tar-all",
    "zip-all",
] }
starbase_args = { version = "0.1.5" }
starbase_console = { version = "0.6.22", features = ["miette"] }
starbase_id = { version = "0.3.2", features = ["miette", "schematic"] }
starbase_sandbox = "0.10.4"
starbase_shell = "0.10.7"
starbase_styles = { version = "0.6.1", features = ["relative-path"] }
starbase_utils = { version = "0.12.6", default-features = false, features = [
    "editor-config",
    "glob-cache",
    "miette",
] }
tera = { version = "1.20.1", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = [
    "macros",
    "process",
    "rt-multi-thread",
    "rt",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-util = "0.7.18"
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4"] }

# proto/plugin related
extism = "=1.13.0"
extism-pdk = "1.4.1"
proto_core = "0.55.3"
proto_pdk_api = "0.31.6"
proto_pdk_test_utils = "0.43.5"
system_env = "0.9.0"
version_spec = "0.10.2"
warpgate = "0.29.1"
warpgate_api = "0.17.2"
warpgate_pdk = "0.16.2"

# proto_core = { path = "../proto/crates/core" }
# proto_pdk_api = { path = "../proto/crates/pdk-api" }
# proto_pdk_test_utils = { path = "../proto/crates/pdk-test-utils" }
# system_env = { path = "../proto/crates/system-env" }
# version_spec = { path = "../proto/crates/version-spec" }
# warpgate = { path = "../proto/crates/warpgate" }
# warpgate_api = { path = "../proto/crates/warpgate-api" }
# warpgate_pdk = { path = "../proto/crates/warpgate-pdk" }

[workspace.lints.clippy]
# Very noisy, lots of false positives!
assigning_clones = "allow"

[workspace.metadata.cargo-shear]
ignored = ["serde"]
