[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["tests/fixtures", "wasm/test-plugin"]
default-members = ["crates/cli"]

[workspace.dependencies]
ai_env = "0.1.1"
async-recursion = "1.1.1"
async-stream = "0.3.6"
blake3 = { version = "1.8.5", features = ["mmap"] }
bazel-remote-apis = { version = "0.27.0", features = ["serde"] }
bytes = "1.12.0"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
cd_env = "0.4.1"
ci_env = "0.5.1"
clap = { version = "4.6.1", default-features = false, features = [
  "derive",
  "std",
  "error-context",
] }
clap_complete = "4.6.5"
compact_str = { version = "0.9.1", default-features = false, features = [
  "serde",
] }
convert_case = "0.11.0"
criterion = { package = "codspeed-criterion-compat", version = "5.0.1", default-features = false, features = [
  "async_tokio",
] }
daggy = { version = "0.9.0", features = ["serde-1"] }
dirs = "6.0.0"
futures = "0.3.31"
httpmock = "0.8.3"
indexmap = "2.13.0"
iocraft = "0.8.3"
libc = "0.2.186"
md5 = "0.8.0"
miette = "7.6.0"
num_cpus = "1.17.0"
pathdiff = "0.2.3"
petgraph = { version = "0.8.3", default-features = false, features = [
  "serde-1",
] }
relative-path = { version = "2.0.1" }
regex = { version = "1.12.3", default-features = false, features = [
  "std",
  "perf",
] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "rustls",
  # We don't use openssl but its required for musl builds
  "native-tls-vendored",
] }
once_cell = "1.21.4"
rustc-hash = "2.1.3"
scc = "3.7.1"
schematic = { version = "0.19.7", default-features = false, features = [
  "schema",
] }
serial_test = "3.4.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
starbase = { version = "0.12.3", features = ["clap", "miette"] }
starbase_archive = { version = "0.13.2", default-features = false, features = [
  "miette",
  "tar-all",
  "zip-all",
] }
starbase_args = { version = "0.1.11" }
starbase_console = { version = "0.6.31", features = ["miette"] }
starbase_id = { version = "0.3.3", features = ["miette", "schematic"] }
starbase_sandbox = "0.11.1"
starbase_shell = "0.12.6"
starbase_styles = { version = "0.6.1", features = ["relative-path"] }
starbase_utils = { version = "0.13.8", default-features = false, features = [
  "editor-config",
  "glob-cache",
  "miette",
] }
tera = { version = "1.20.1", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = [
  "macros",
  "process",
  "rt-multi-thread",
  "rt",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tokio-util = "0.7.18"
tonic = { version = "0.14.6", default-features = false }
tonic-prost = "0.14.6"
tower = "0.5.3"
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4"] }
windows-sys = { version = "0.61.2", default-features = false }

# proto/plugin related
extism = "=1.30.0"
extism-pdk = "1.4.1"
proto_core = "0.58.2"
proto_pdk_api = "0.31.13"
proto_pdk_test_utils = "0.46.0"
proto_shim = "0.8.2"
system_env = "0.10.0"
version_spec = "0.10.3"
warpgate = "0.33.0"
warpgate_api = "0.17.5"
warpgate_pdk = "0.16.4"

# proto_core = { path = "../proto/crates/core" }
# proto_pdk_api = { path = "../proto/crates/pdk-api" }
# proto_pdk_test_utils = { path = "../proto/crates/pdk-test-utils" }
# system_env = { path = "../proto/crates/system-env" }
# version_spec = { path = "../proto/crates/version-spec" }
# warpgate = { path = "../proto/crates/warpgate" }
# warpgate_api = { path = "../proto/crates/warpgate-api" }
# warpgate_pdk = { path = "../proto/crates/warpgate-pdk" }

[workspace.lints.clippy]
# Very noisy, lots of false positives!
assigning_clones = "allow"

[workspace.metadata.cargo-shear]
ignored = ["serde"]
