[workspace]
resolver = "3"
members = ["*"]
exclude = ["target"]

[workspace.dependencies]
moon_common = { path = "../crates/common" }
moon_config = { path = "../crates/config" }
moon_pdk = { path = "../crates/pdk" }
moon_pdk_api = { path = "../crates/pdk-api" }
moon_target = { path = "../crates/target" }
extism = "=1.30.0"
extism-pdk = "1.4.1"
warpgate_pdk = "0.16.4"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
