[package]
name = "moon_action_graph"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Dependency graph for actions (tasks)."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_action = { path = "../action" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
# TODO remove
moon_platform = { path = "../../legacy/core/platform" }
moon_project = { path = "../project" }
moon_project_graph = { path = "../project-graph" }
moon_task = { path = "../task" }
moon_query = { path = "../query" }
graph-cycles = "0.1.0"
miette = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
moon_config = { path = "../config" }
moon_test_utils2 = { path = "../test-utils" }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
