[package]
name = "moon_action_pipeline"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
moon_action = { path = "../action" }
moon_action_context = { path = "../action-context" }
moon_action_graph = { path = "../action-graph" }
moon_actions = { path = "../actions" }
moon_api = { path = "../api" }
moon_app_context = { path = "../app-context" }
moon_cache = { path = "../cache" }
moon_common = { path = "../common" }
moon_console = { path = "../console" }
moon_notifier = { path = "../notifier" }
moon_project = { path = "../project" }
moon_project_graph = { path = "../project-graph" }
moon_task = { path = "../task" }
moon_toolchain = { path = "../toolchain" }
moon_toolchain_plugin = { path = "../toolchain-plugin" }
async-trait = { workspace = true }
miette = { workspace = true }
num_cpus = "1.16.0"
petgraph = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
