[package]
name = "moon_action_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
moon_action = { path = "../action" }
moon_config = { path = "../config" }
moon_error = { path = "../error" }
moon_lang = { path = "../lang" }
moon_logger = { path = "../logger" }
moon_project = { path = "../project" }
moon_project_graph = { path = "../project-graph" }
moon_task = { path = "../task" }
moon_terminal = { path = "../terminal" }
moon_utils = { path = "../utils" }
moon_workspace = { path = "../workspace" }
console = "0.15.0"
petgraph = "0.6.2"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }

[dev-dependencies]
moon_cache = { path = "../cache" }
insta = "1.16.0"
