[package]
name = "moon_action_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
moon_action = { path = "../action" }
moon_cache = { path = "../cache" }
moon_config = { path = "../config" }
moon_contract = { path = "../contract" }
moon_error = { path = "../error" }
moon_hasher = { path = "../hasher" }
moon_lang = { path = "../lang" }
moon_logger = { path = "../logger" }
moon_platform_node = { path = "../platform-node" }
moon_platform_system = { path = "../platform-system" }
moon_project = { path = "../project" }
moon_project_graph = { path = "../project-graph" }
moon_task = { path = "../task" }
moon_terminal = { path = "../terminal" }
moon_toolchain = { path = "../toolchain" }
moon_utils = { path = "../utils" }
moon_vcs = { path = "../vcs" }
moon_workspace = { path = "../workspace" }
console = "0.15.1"
petgraph = "0.6.2"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
moon_cache = { path = "../cache" }
insta = "1.20.0"
