[package]
name = "moon_action"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
moon_common = { path = "../common" }
moon_target = { path = "../target" }
moon_time = { path = "../time" }
moon_toolchain = { path = "../toolchain" }
miette = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["rc"] }

[lints]
workspace = true
