[package]
name = "moon_actions"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
moon_action = { path = "../action" }
moon_action_context = { path = "../action-context" }
moon_app_context = { path = "../app-context" }
moon_codeowners = { path = "../codeowners" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
moon_project_graph = { path = "../project-graph" }
moon_vcs_hooks = { path = "../vcs-hooks" }
miette = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# moon_common = { path = "../common" }
# moon_target = { path = "../target" }
# clap = { workspace = true }
# relative-path = { workspace = true, features = ["serde"] }
# rustc-hash = { workspace = true }
# scc = { workspace = true, features = ["serde"] }

[lints]
workspace = true
