[package]
name = "moon_actions"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
moon_action = { path = "../action" }
moon_action_context = { path = "../action-context" }
moon_app_context = { path = "../app-context" }
moon_cache_item = { path = "../cache-item" }
moon_codeowners = { path = "../codeowners" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
moon_config_schema = { path = "../config-schema" }
moon_hash = { path = "../hash" }
moon_project = { path = "../project" }
moon_project_graph = { path = "../project-graph" }
moon_task_runner = { path = "../task-runner" }
moon_time = { path = "../time" }
moon_vcs_hooks = { path = "../vcs-hooks" }
miette = { workspace = true }
proto_core = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# TODO REMOVE
moon_platform = { path = "../../legacy/core/platform" }

[lints]
workspace = true
