[package]
name = "moon_api"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
moon_cache = { path = "../cache" }
moon_common = { path = "../common" }
moon_env = { path = "../env" }
moon_time = { path = "../time" }
cd_env = { workspace = true }
ci_env = { workspace = true }
md5 = "0.7.0"
miette = { workspace = true }
proto_core = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
rustc-hash = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
