[package]
name = "moon_app_context"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
moon_cache = { path = "../cache" }
moon_config = { path = "../config" }
moon_console = { path = "../console" }
moon_toolchain_plugin = { path = "../toolchain-plugin" }
moon_vcs = { path = "../vcs" }

[lints]
workspace = true
