[package]
name = "moon_app"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
moon_action = { path = "../action" }
moon_action_context = { path = "../action-context" }
moon_action_graph = { path = "../action-graph" }
moon_action_pipeline = { path = "../action-pipeline" }
moon_actions = { path = "../actions" }
moon_affected = { path = "../affected" }
moon_api = { path = "../api" }
moon_app_context = { path = "../app-context" }
moon_cache = { path = "../cache" }
moon_codegen = { path = "../codegen" }
moon_common = { path = "../common" }
moon_config = { path = "../config", features = ["loader", "proto", "tracing"] }
moon_console = { path = "../console" }
moon_console_reporter = { path = "../console-reporter" }
moon_docker = { path = "../docker" }
moon_env = { path = "../env" }
moon_extension_plugin = { path = "../extension-plugin" }
moon_plugin = { path = "../plugin" }
moon_project = { path = "../project" }
moon_project_graph = { path = "../project-graph" }
moon_query = { path = "../query" }
moon_remote = { path = "../remote" }
moon_task = { path = "../task" }
moon_task_graph = { path = "../task-graph" }
moon_toolchain = { path = "../toolchain" }
moon_toolchain_plugin = { path = "../toolchain-plugin" }
moon_vcs = { path = "../vcs" }
moon_workspace = { path = "../workspace" }
moon_workspace_graph = { path = "../workspace-graph" }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bytes = "1.9.0"
ci_env = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "env",
    "help",
    "suggestions",
    "usage",
    "wrap_help",
] }
clap_complete = { workspace = true }
clap_complete_nushell = "4.5.5"
diff = "0.1.13"
miette = { workspace = true }
once_cell = { workspace = true }
proto_core = { workspace = true }
proto_installer = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true, features = ["config"] }
semver = { workspace = true }
serde = { workspace = true }
starbase = { workspace = true }
starbase_events = { workspace = true }
starbase_shell = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
system_env = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Visualizer
open = "5.3.1"
petgraph = { workspace = true }
tera = { workspace = true }
tiny_http = "0.12.0"

# TODO remove
console = { workspace = true }
dialoguer = { version = "0.11.0", default-features = false }
indicatif = "0.17.9"
moon_lang = { path = "../../legacy/core/lang" }
moon_tool = { path = "../../legacy/core/tool" }
moon_platform = { path = "../../legacy/core/platform" }
moon_bun_tool = { path = "../../legacy/bun/tool" }
moon_bun_platform = { path = "../../legacy/bun/platform" }
moon_deno_tool = { path = "../../legacy/deno/tool" }
moon_deno_platform = { path = "../../legacy/deno/platform" }
moon_node_lang = { path = "../../legacy/node/lang" }
moon_node_tool = { path = "../../legacy/node/tool" }
moon_node_platform = { path = "../../legacy/node/platform" }
moon_python_lang = { path = "../../legacy/python/lang" }
moon_python_tool = { path = "../../legacy/python/tool" }
moon_python_platform = { path = "../../legacy/python/platform" }
moon_rust_lang = { path = "../../legacy/rust/lang" }
moon_rust_tool = { path = "../../legacy/rust/tool" }
moon_rust_platform = { path = "../../legacy/rust/platform" }
moon_system_platform = { path = "../../legacy/system/platform" }
moon_typescript_lang = { path = "../../legacy/typescript/lang" }

[dev-dependencies]
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
